# lukaton

./: .gitignore  agent.py  gmail_client.py  main.py  pyproject.toml  scrape.py
banks/: __init__.py  base.py  bchile.py  cmr.py
client/: gmail.py
utils/: pdf.py
